--- a/example/ctf.yaml
+++ b/example/ctf.yaml
@@ -1,13 +1,12 @@
 kind: ctf
 name: fakectf
 challenges:
-    - ./challs/01-test
-    - ./challs/02-dutyfree
+    - ./challs/01-demo
 teams_file: ./staff.json
 deployments:
     -   environment: testing
         provider: gcp
-        internal_domain: norzh.ctf
+        internal_domain: fake.ctf
         gcp:
             project: norzh-ctf-2021
             region: europe-west1
